Dev image: No groovy required
The gitops-playground.jar already contains groovy-all.

So using JRE image directly, makes the dev image smaller and less vulnerable. Or at least vulns are easier to fix, because all the dependencies are contained in pom.xml
The local (uncompressed) image is now 642 instead of 700MB